[gd_scene load_steps=6 format=3 uid="uid://1gfropwtqfbn"]

[ext_resource type="Environment" uid="uid://wwq6f40kybqq" path="res://GodotSky/WorldEnvironment/default_environment.tres" id="1_ico8d"]
[ext_resource type="Script" path="res://GodotSky/Scripts/GodotSky.gd" id="2_8wvsc"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_5u6gj"]
auto_exposure_enabled = true

[sub_resource type="SphereMesh" id="SphereMesh_pkqrv"]

[sub_resource type="SphereMesh" id="SphereMesh_ackkx"]

[node name="GodotSky" type="WorldEnvironment"]
environment = ExtResource("1_ico8d")
camera_attributes = SubResource("CameraAttributesPractical_5u6gj")
script = ExtResource("2_8wvsc")
timeOfDay = 479.4
simulateTime = true
rateOfTime = 1.02
cloudType = "2D Dynamic"
cloudCoverage = 0.404
animateStaticClouds = false

[node name="SunMoon" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.31051, -0.950569, 0, 0.950569, 0.31051, 0, 0, 0)

[node name="Sun" type="MeshInstance3D" parent="SunMoon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
transparency = 1.0
mesh = SubResource("SphereMesh_pkqrv")

[node name="SunLight" type="DirectionalLight3D" parent="SunMoon/Sun"]
transform = Transform3D(1, 0, 1.49012e-08, -1.49012e-08, -8.19564e-08, -1, 2.98023e-08, 1, -3.72529e-08, 0, 0, 0)
light_color = Color(0, 0, 0, 1)
light_energy = 0.0
shadow_enabled = true

[node name="Moon" type="MeshInstance3D" parent="SunMoon"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1, 0)
transparency = 1.0
mesh = SubResource("SphereMesh_ackkx")

[node name="MoonLight" type="DirectionalLight3D" parent="SunMoon/Moon"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
light_color = Color(0.335796, 0.371132, 0.522767, 1)
light_energy = 0.0249451
shadow_enabled = true
